[package]
name = "gridwalk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
gdal = { version = "0.18" }
gdal-sys = { version = "0.11", features = ["bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
sqlx = { version = "0.8", features = [ "chrono", "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.6"
tracing = "0.1.41"
uuid = { version = "1.18", features = ["v4", "serde"] }
